@@ -1,3 +1,8 @@
+2020-01-17  Mihail-Calin Ionescu <mihail.ionescu@arm.com>
+	    Sudakshina Das  <sudi.das@arm.com>
+
+	* gcc.target/arm/armv8_1m-shift-reg_1.c: New test.
+
 2020-01-17  Jonathan Wakely  <jwakely@redhat.com>
 
 	PR testsuite/93227
