@@ -1,3 +1,13 @@
+2020-01-17  Mihail-Calin Ionescu  <mihail.ionescu@arm.com>
+	    Sudakshina Das  <sudi.das@arm.com>
+
+	* config/arm/arm.md (ashldi3): Generate thumb2_lsll for TARGET_HAVE_MVE.
+	(ashrdi3): Generate thumb2_asrl for TARGET_HAVE_MVE.
+	* config/arm/arm.c (arm_hard_regno_mode_ok): Allocate even odd
+	register pairs for doubleword quantities for ARMv8.1M-Mainline.
+	* config/arm/thumb2.md (thumb2_asrl): New.
+	(thumb2_lsll): Likewise.
+
 2020-01-17  Jakub Jelinek  <jakub@redhat.com>
 
 	* config/arm/arm.c (cmse_nonsecure_call_inline_register_clear): Remove
